--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Kanban board</title>
-
+    
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheet.css" />
+
+    <script src="https://unpkg.com/vanilla-picker@2"></script>
     <!-- <meta name="viewport" content="width=device-width"> -->
 
 
