--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Kanban board</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheet.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <!-- <meta name="viewport" content="width=device-width"> -->
+    
 
     <!-- <script type="module" src="./app.js" ></script> -->
   </head>
@@ -15,12 +15,13 @@
       <div class="column" id="to-do">
         <div class="column-name" >
           <h2 >To do</h2>
-          <button class="button" id="btn-add-task"> 
+          <button class="button" name="add" id="btn-add-task"> 
             <i class="fas fa-plus"></i>
-            Add Task
           </button>
         </div>
-        <div class="container" name="container" id="to-do-list"></div>
+        <div class="container" name="container" id="to-do-list">
+        </div>
+
       </div>
       <div class="column" id="in-progress">
         <div class="column-name">
