acceptabe look + add button in all columns

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <div class="column" id="to-do">
         <div class="column-name" >
           <h2 >To do</h2>
-          <button class="button" name="add" id="btn-add-task"> 
+          <button class="button" name="add" > 
             <i class="fas fa-plus"></i>
           </button>
         </div>
@@ -26,6 +26,9 @@
       <div class="column" id="in-progress">
         <div class="column-name">
           <h2 >In progress</h2>
+          <button class="button" name="add" > 
+            <i class="fas fa-plus"></i>
+          </button>
         </div>
         
         <div class="container" name="container" id="in-progress-list"></div>
@@ -33,6 +36,9 @@
       <div class="column" id="done">
         <div class="column-name">
           <h2 >Done</h2>
+          <button class="button" name="add" > 
+            <i class="fas fa-plus"></i>
+          </button>
         </div>
         
         <div class="container" name="container" id="done-list"></div>
