--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="stylesheet.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vanilla-picker@2"></script>
     
-
-    <!-- <script type="module" src="./app.js" ></script> -->
   </head>
   <body>
     <div class="main">
