--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Kanban board</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="/stylesheet.css" />
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
