--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
       </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="/script.js"></script>
   </body>
 </html>
