--- a/public/signIn.html
+++ b/public/signIn.html
@@ -14,7 +14,7 @@
 
     <div class="tabcontent" id="signin">
       <h1>Sign in</h1>
-      <form id="loginForm" action="/login" method="post">
+      <form id="loginForm" action="/signin" method="post">
         <section>
           <label for="username">Username</label>
           <input
@@ -43,11 +43,11 @@
     <!-- ------------------------------------------------------------------ -->
     <div class="tabcontent" id="signup">
       <h1>Sign up</h1>
-      <form id="SingUpForm" action="/register" method="post">
+      <form id="SingUpForm">
         <section>
           <label for="username">Username</label>
           <input
-            id="username"
+            id="username-register"
             name="username"
             type="text"
             autocomplete="username"
@@ -56,18 +56,24 @@
         </section>
         <section>
           <label for="input-password">Password</label>
-          <input id="input-password" name="password" type="password" required />
-        </section>
-        <!-- <section>
-          <label for="repeat-password">Password</label>
           <input
-            id="repeat-password"
-            name="password"
+            id="input-password"
+            name="input-password"
             type="password"
             required
           />
-        </section> -->
-        <button type="submit">Sign in</button>
+        </section>
+        <section>
+          <label for="repeat-password">Repeat password</label>
+          <input
+            id="repeat-password"
+            name="repeat-password"
+            type="password"
+            required
+          />
+        </section>
+
+        <button type="submit">Sign up</button>
       </form>
     </div>
   </body>
